--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ build/Release
 
 # Dependency directories
 backend/node_modules/
-fronten/node_modules/
+frontend/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
