--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 backend/node_modules/
 frontend/node_modules/
+frontend/.angular
 jspm_packages/
 
 # TypeScript v1 declaration files
